--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   get: ^4.6.6
   carousel_slider: ^5.0.0
+  page_view_dot_indicator: ^2.3.0
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
